doc/programming/examples/_parse-requires-with-error.spicy
# Automatically generated; edit in Sphinx source code, not here.
module Test;

import spicy;

public type Foo = unit {
    x: int8 &requires=($$ < 5 : "x is too large"); # custom error message
    on %done { print self; }
};